root/css/style.css
/* ... */
.ie7 img { -ms-interpolation-mode: bicubic; }

.ir { display: block; text-indent: -999em; overflow: hidden; background-repeat: no-repeat; text-align: left; direction: ltr; }
.hidden { display: none; visibility: hidden; } 
.visuallyhidden { position: absolute !important; clip: rect(1px 1px 1px 1px);  clip: rect(1px, 1px, 1px, 1px); }
.invisible { visibility: hidden; }
.clearfix:before, .clearfix:after {  content: "\0020"; display: block; height: 0; visibility: hidden;	 } 
.clearfix:after { clear: both; }
.clearfix { zoom: 1; }
.clear { clear: both }
.nowrap { white-space: nowrap }


 /* Primary Styles
    Author: Kevin Jones
 */

.floatleft { float: left }

html, body {
    height: 100%;
    overflow-x: hidden;
    overflow-y: hidden;
    width: 100%;
}

body {
    font: 12px 'Helvetica', Arial, sans-serif;
    background: #000;
}

/* MIN WIDTH */
body, .middle, #links {
    min-width: 900px;
    width: expression(document.body.clientWidth < 900 ? "900px" : "100%");
}
#wizard .boxes {
    width: 900px;
    margin-left: -450px;
}
#links {
    min-width: 950px;
    width: expression(document.body.clientWidth < 950 ? "950px" : "100%");
}
/*****/

#background {
    position: absolute;
    top: 0;
    left: 0;
    z-index: -2;
}

header {
}

.white {
    width: 100%;
    height: 100%;
    background: #fff;
    z-index: -1;
    opacity: .8;
    filter: alpha(opacity = 80);
}

.tiny {
    font-size: 9pt;
    vertical-align: middle;
}

.smallSocialButtons {
    position: absolute;
    left: 10px;
    top: 0;
    height: 25px;
    z-index: 101;
    width: 210px;
}
.smallSocialButtons .facebook_like {
    position: absolute;
    left: 0px;
    top: 4px;
}
.smallSocialButtons .google-buzz-button {
    position: absolute;
    left: 83px;
    top: 3px;
    line-height: 22px;
}
/*.smallSocialButtons .google-buzz-button span { : 15px }*/
.smallSocialButtons .twitter-share-button {
    position: absolute;
    left: 145px;
    top: 4px;
}

#links {
    font-size: 10pt;
    width: 100%;
    height: 30px;
    text-align: center;
    position: absolute;
    top: 0;
}
#links .links {
    margin: 8px 0;
    color: #aaa;
    position: relative;
    z-index: 101;
}
#links .white {
    position: absolute;
    left: 0;
    background-color: #000;
    z-index: 100;
}

#links .links a {
    padding: 0 6px 0 2px;
}

#simpleLayout,
#smallLayout {
    position: absolute;
    top: 50%;
    height: 200px;
    margin-top: -90px;
    width: 100%;
}

#simpleLayout .logo {
    position: absolute;
    right: 66%;
    top: 50px;
    margin-right: 25px;
}
#simpleLayout .error {
    font-size: 20pt;
    position: absolute;
    top: 75px;
    left: 33%;
    margin-left: 25px;
}

/* Static pages */
#staticLayout {
    height: 100%;
}
#staticLayout .staticContentWrapper {
    overflow-y: scroll;
    overflow-x: hidden;
    height: 100%;
    margin: 30px 0;
}
#staticLayout .main {
    position: absolute;
    top: 0;
    left: 0;
}
#staticLayout .logo {
    position: absolute;
    left: 17px;
    top: 50px;
}

#staticLayout .text {
    position: absolute;
    top: 0;
    height: 100%;
    width: 600px;
}
#staticLayout img.screenshot {
    width: 600px;
    margin-left: -25px;
}

#staticLayout .staticContent,
#staticLayout .text {
    font-size: 115%;
    width: 550px;
    margin-left: 340px;
    padding: 0 2em 2em 2em;
}

#staticLayout .staticContent p {
    padding: 0.5em 1em;
}

#staticLayout .staticContent h1 {
    padding: 0;
    padding-top: 20px;
    margin: 0;
}

#staticLayout .staticContent h2,
#staticLayout .staticContent h3,
#staticLayout .staticContent h4,
#staticLayout .staticContent h5 {
}

/* done static pages */

input.hiddenButton {
    height: 0;
    width: 0;
    opacity: 0;
    filter: alpha(opacity = 0);
}

/* Wizard */

.logo {
    width: 305px;
    vertical-align: middle;
}
.beta {
    height: 62px;
    width: 62px;
}

#wizard div.error {
    padding: 5px;
    background-color: #f9d7d7;
    border: 1px solid #cd0a0a;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}
#wizard input.error {
    background-color: #f9d7d7;
    border: 1px solid #cd0a0a;
}
#wizard label.error {
    color: #cd0a0a;
}

.huge {
    border: 1px solid #666;
    font-size: 18pt;
    padding: 8px;
    width: 240px;
    margin: 3px;
}

.title {
    font-size: 18pt;
    padding: 10px 0;
}

.subtitle {
    font-size: 12pt;
    padding: 0px 0px 10px;
}

/* Layout */

.middle {
    font-size: 120%;
    position: absolute;
    left; 0;
    top: 50%;
    margin-top: -100px;
    /* margin-top must be -(height/2) */
    width: 100%;
}

.middle .row {
    position: relative;
}

/* 3 column layout */
.middle .row .left,
.middle .row .center,
.middle .row .right {
    position: absolute;
}

.middle .row .left {
    right: 60%;
    height:100px;
    margin-top: 73px;
    margin-right: 25px;
}
.middle .row .right {
    left: 40%;
    width: 55%;
}
.middle .row .center { left: 25%; width: 50% }

.middle .centered .left { right: 50%; }
.middle .centered .right { left: 50%; width: 50% }

.subscription .row .center {
    left: 50%;
    width: 450px;
    margin-left: -225px;
}

/* Top row layout */
.middle .top .left { margin-right: 140px }
.middle .top .right { right: 50%; margin-left: -115px; width: 100% }

/* Zone page */
.zonePage {
    /* Put it in the center */
    width: 880px;
    left: 50%;
    margin-left: -440px;
}
.middle .zonePage .left { left: 0; margin: 0; width: 300px }
.middle .zonePage .right { left: 330px; width: 550px } /* end: 880px */

noscript.middle .row .left { top: 45px; left: 30px }
noscript.middle .row .right { top: 85px; left: 380px }

/* done Layout */

/* Two panel steps */

/**
 * Wizard Step: Address search
 */

#wizard .addressForm {
    height: 60px;
}

#wizard .message {
    font-size: 12pt;
    padding: 3px 3px 3px 3px;
}

#wizard .message p {
    margin: 5px 0;
}

#wizard .message p.big {
    font-size: 18pt;
}

input.initial {
    font-style: italic;
    color: #555;
}
/* ... */

